separate SpecoTest